# AOSRPGGBSD

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  clean.sh  tidy.sh  write_file.cmake
.github/workflows/: build.yml
src/: main.cpp  test_snapshot.cpp  test_worker.cpp
src/Basics/: Engine.Basics.Game.cppm  Engine.Basics.Memory.MemoryStream.cppm  Engine.Basics.Memory.cppm  Engine.Basics.Random.cppm  Engine.Basics.TextUtils.cppm  Engine.Basics.TextUtils.functions.cppm
src/GUI/: Engine.GUI.GUIManager.Cmd.cppm  Engine.GUI.GUIManager.cppm  Engine.GUI.GUIManager.functions.cppm
src/GUI/LDRM/: Engine.GUI.LDRM.cppm
src/GUI/OpenCL/: Engine.GUI.OpenCL.cppm
src/GUI/SDL/: Engine.GUI.SDL.cppm
src/Game/: Engine.Game.MainLoop.cppm  Engine.Game.ShutDown.cppm  Engine.Game.StartUp.cppm
src/Resources/: i18n.rres  startup.lua  startup.rres  test.rres  zh-CN.json
src/Resources/BGM/: BGM.rres  FallInMyDream.mmpz  FallInMyDream.mmpz.bak  ITERATION.mmpz  小号.sf2
src/Resources/Background/: background.rres  renderer.lua
src/Resources/Fonts/: fonts.rres
src/Resources/SoundEffect/: sfx.rres
src/Resources/i18n/: en-US.json  i18n.rres  zh-CN.json
src/Resources/test/: worker.lua  workertest.lua  workertest.rres
src/Sound/: Engine.Sound.SoundManager.cppm  Engine.Sound.SoundManager.functions.cppm
src/Utils/: Engine.Utils.Time.cppm
src/Utils/Arguments/: Engine.Utils.Arg.Actions.cppm  Engine.Utils.Arg.Format.cppm  Engine.Utils.Arg.MArg.cppm
src/Utils/Data/: Engine.Utils.Data.DB.cppm  Engine.Utils.Data.DataEntry.EntryType.cppm  Engine.Utils.Data.DataEntry.cppm  Engine.Utils.Data.DataManager.cppm  Engine.Utils.Data.DataManager.fuction.cppm  Engine.Utils.Data.DataManager.functions.cppm
src/Utils/DevConsole/: Engine.Utils.DevConsole.MainAct.cppm  Engine.Utils.DevConsole.cppm
src/Utils/Logger/: Engine.Utils.Logger.LogLevel.cppm  Engine.Utils.Logger.cppm
src/Utils/Param/: Engine.Utils.Param.Format.cppm  Engine.Utils.Param.MParam.cppm
src/Utils/Script/: Engine.Utils.Script.FState.cppm  Engine.Utils.Script.Lua.cppm  Engine.Utils.Script.ScriptManager.cppm  Engine.Utils.Script.ScriptManager.functions.cppm  Engine.Utils.Script.Worker.cppm
src/i18n/: Engine.i18n.cppm  Engine.i18n.functions.cppm  Engine.i18n.impl.cpp
